finishes visual representation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@ crossorigin="anonymous"></script>
     <title>My Developer Skills </title>
 </head>
 <body>
-    
+    <main>
+        <h1>My Developer Skills</h1>
+        <ul>
+            <li><span>X</span> Javascript (ES6)</li>
+            <li><span>x</span> Cascading Style Sheets</li>
+            <li><span>x</span>HyperText Markup Language (HTML5)</li>
+        </ul>
+            <input type = "text"> 
+            <button> Add Skill </button>
+
+        
+    </main>
 </body>
 </html>
